# gp-sandbox

./: .gitignore  .travis.yml  README.md  gp-sandbox.cabal  stack.yaml
app/: Main.hs
lib/genprog-0.1.0.2/: genprog.cabal
src/: GP.hs  OhHell.hs
src/OhHell/: Core.hs  Game.hs  Player.hs  Pretty.hs  Rules.hs  Strategies.hs  Strategy.hs
test/: GameSpec.hs
