name:                gp-sandbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/declension/gp-sandbox#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Boultbee
maintainer:          nick@declension.net
copyright:           All Rights Reserved
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GP, OhHell.Player, OhHell.Core, OhHell.Rules OhHell.Game, OhHell.Strategies, OhHell.Pretty
  build-depends:       base >= 4.9 && < 5
                     , classy-prelude
                     , containers > 0.5
                     , mtl
                     , genprog > 0.1
                     , general-games
                     , random-shuffle >= 0.0.4
                     , syb == 0.7.*, syz
                     , MonadRandom == 0.5.*
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

executable gp-sandbox
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base > 4.9
                     , gp-sandbox
                     , classy-prelude
                     , mtl > 2.2
                     , general-games
                     , genprog > 0.1
                     , MonadRandom == 0.5.*
  default-language:    Haskell2010

test-suite gp-sandbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       GameSpec
  main-is:             Spec.hs
  build-depends:       base > 4.9
                     , gp-sandbox
                     , mtl > 2.2
                     , general-games
                     , MonadRandom == 0.5.*
                     , classy-prelude
                     , containers > 0.5
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-deprecations`
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/declension/gp-sandbox
